fix inline tooltip alignment

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -37,8 +37,11 @@
 }
 
 .nacsos-tooltip > .small {
-    width: 10rem;
-    margin: -1rem 0 0 -100%;
+    margin: 0;
+    transform: translate(-50%,-100%);
+    max-width: 10rem;
+    text-align: center;
+    inline-size: max-content;
 }
 
 .nacsos-tooltip > .medium {
